# dApp-flexric

./: .gitignore  CMakeLists.txt
ci-scripts/: Jenkinsfile
examples/xApp/c/: CMakeLists.txt
examples/xApp/c/spectrum/: CMakeLists.txt  xapp_spectrum.c
src/agent/: e2_agent.c  e2_agent.h  e2_agent_api.c  e2_agent_api.h  msg_handler_agent.c
src/lib/3gpp/dec/: dec_en_gnb.h  dec_enb.h  dec_global_enb_id.h  dec_global_gnb_id.h  dec_global_ng_enb.h  dec_global_ng_ran.h  dec_gnb.h  dec_gnb_cu_up.h  dec_gnb_du.h  dec_ng_enb.h  dec_ng_enb_du.h
src/lib/3gpp/enc/: enc_en_gnb.h  enc_enb.h  enc_global_enb_id.h  enc_global_gnb_id.h  enc_global_ng_enb.h  enc_global_ng_ran.h  enc_gnb.h  enc_gnb_cu_up.h  enc_gnb_du.h  enc_ng_enb.h  enc_ng_enb_du.h
src/lib/e2ap/v2_03/dec/: e2ap_msg_dec_asn.c
src/lib/e2ap/v2_03/e2ap_types/: ric_service_update.h
src/lib/e2ap/v2_03/enc/: e2ap_msg_enc_asn.c
src/lib/e2ap/v2_03/free/: e2ap_msg_free.c
src/lib/msg_hand/: reg_e2_nodes.c  reg_e2_nodes.h
src/lib/sm/dec/: dec_cell_global_id.h  dec_ue_id.h
src/lib/sm/enc/: enc_cell_global_id.h  enc_ue_id.h
src/ric/: map_e2_node_sockaddr.c  map_e2_node_sockaddr.h  msg_handler_ric.c  near_ric.c
src/ric/iApp/: e42_iapp.c  msg_handler_iapp.c  msg_handler_iapp.h
src/ric/iApps/: influx.c  redis.c  stdout.c
src/sm/: CMakeLists.txt
src/sm/agent_if/ans/: sm_ag_if_ans.h
src/sm/agent_if/read/: sm_ag_if_rd.c  sm_ag_if_rd.h
src/sm/agent_if/write/: sm_ag_if_wr.h
src/sm/dapp_sm/: CMakeLists.txt  dapp_sm_agent.c  dapp_sm_agent.h  dapp_sm_id.h  dapp_sm_ric.c  dapp_sm_ric.h
src/sm/dapp_sm/dec/: dapp_dec_asn.c  dapp_dec_asn.h  dapp_dec_fb.c  dapp_dec_fb.h  dapp_dec_generic.h  dapp_dec_plain.c  dapp_dec_plain.h
src/sm/dapp_sm/e3/: CMakeLists.txt  dapp_dec_e3.c  dapp_dec_e3.h  dapp_enc_e3.c  dapp_enc_e3.h
src/sm/dapp_sm/e3/service_models/spectrum_sm/asn/: decoder.c  decoder.h  encoder.c  encoder.h
src/sm/dapp_sm/e3/service_models/spectrum_sm/asn/defs/: CMakeLists.txt  e3sm_spectrum.asn
src/sm/dapp_sm/e3/service_models/spectrum_sm/ir/: spectrum_control.c  spectrum_control.h  spectrum_report.c  spectrum_report.h
src/sm/dapp_sm/enc/: dapp_enc_asn.c  dapp_enc_asn.h  dapp_enc_fb.c  dapp_enc_fb.h  dapp_enc_generic.h  dapp_enc_plain.c  dapp_enc_plain.h
src/sm/dapp_sm/ie/: dapp_data_ie.c  dapp_data_ie.h
src/sm/dapp_sm/ie/asn/: CMakeLists.txt  e2sm_dapp_v0_standard.asn
src/sm/dapp_sm/ie/ir/: CMakeLists.txt  dapp_e3_subscription_item.c  dapp_e3_subscription_item.h  dapp_e3_subscription_list.c  dapp_e3_subscription_list.h  e2sm_dapp_act_def_frmt_0.c  e2sm_dapp_act_def_frmt_0.h  e2sm_dapp_action_def.c  e2sm_dapp_action_def.h  e2sm_dapp_ctrl_hdr_frmt_0.c  e2sm_dapp_ctrl_hdr_frmt_0.h  e2sm_dapp_ctrl_hdr_frmt_1.c  e2sm_dapp_ctrl_hdr_frmt_1.h  e2sm_dapp_ctrl_msg_frmt_0.c  e2sm_dapp_ctrl_msg_frmt_0.h  e2sm_dapp_ctrl_msg_frmt_1.c  e2sm_dapp_ctrl_msg_frmt_1.h  e2sm_dapp_ctrl_out_frmt_0.c  e2sm_dapp_ctrl_out_frmt_0.h  e2sm_dapp_ctrl_out_frmt_1.c  e2sm_dapp_ctrl_out_frmt_1.h  e2sm_dapp_ev_trg_frmt_0.c  e2sm_dapp_ev_trg_frmt_0.h  e2sm_dapp_ev_trg_frmt_1.c  e2sm_dapp_ev_trg_frmt_1.h  e2sm_dapp_ind_hdr_frmt_0.c  e2sm_dapp_ind_hdr_frmt_0.h  e2sm_dapp_ind_hdr_frmt_1.c  e2sm_dapp_ind_hdr_frmt_1.h  e2sm_dapp_ind_hdr_frmt_2.c  e2sm_dapp_ind_hdr_frmt_2.h  e2sm_dapp_ind_msg_frmt_0.c  e2sm_dapp_ind_msg_frmt_0.h  e2sm_dapp_ind_msg_frmt_1.c  e2sm_dapp_ind_msg_frmt_1.h  e2sm_dapp_ind_msg_frmt_2.c  e2sm_dapp_ind_msg_frmt_2.h  ran_func_def_ctrl.c  ran_func_def_ctrl.h  ran_func_def_ev_trig.c  (+11 more)
src/sm/gtp_sm/dec/: gtp_dec_generic.h  gtp_dec_plain.h
src/sm/gtp_sm/enc/: gtp_enc_generic.h  gtp_enc_plain.h
src/sm/kpm_sm/kpm_sm_v02.01/dec/: kpm_dec_plain.h
src/sm/kpm_sm/kpm_sm_v02.01/dec/dec_asn/: dec_ric_action_def_frm_1.h  dec_ric_action_def_frm_2.h  dec_ric_action_def_frm_3.h  dec_ric_action_def_frm_4.h  dec_ric_action_def_frm_5.h  dec_ric_event_trigger_frm_1.h  dec_ric_ind_hdr_frm_1.h  dec_ric_ind_msg_frm_1.h  dec_ric_ind_msg_frm_2.h  dec_ric_ind_msg_frm_3.h
src/sm/kpm_sm/kpm_sm_v02.01/dec/dec_asn_kpm_common/: dec_bin_range_def.h  dec_matching_cond_frm_3.h  dec_matching_cond_frm_4.h  dec_meas_bin_range_info.h  dec_test_info.h
src/sm/kpm_sm/kpm_sm_v02.01/enc/: kpm_enc_asn.h
src/sm/kpm_sm/kpm_sm_v02.01/enc/enc_asn/: enc_ric_action_def_frm_1.h  enc_ric_action_def_frm_2.h  enc_ric_action_def_frm_3.h  enc_ric_action_def_frm_4.h  enc_ric_action_def_frm_5.h  enc_ric_event_trigger_frm_1.h  enc_ric_ind_hdr_frm_1.h  enc_ric_ind_msg_frm_1.h  enc_ric_ind_msg_frm_2.h  enc_ric_ind_msg_frm_3.h
src/sm/kpm_sm/kpm_sm_v02.01/enc/enc_asn_kpm_common/: enc_bin_range_def.h  enc_matching_cond_frm_3.h  enc_matching_cond_frm_4.h  enc_meas_bin_range_info.h  enc_test_info.h
src/sm/kpm_sm/kpm_sm_v02.03/dec/: kpm_dec_generic.h
src/sm/kpm_sm/kpm_sm_v02.03/dec/dec_asn/: dec_ric_action_def_frm_1.h  dec_ric_action_def_frm_2.h  (+8 more)
src/sm/kpm_sm/kpm_sm_v03.00/dec/: kpm_dec_asn.h
src/sm/kpm_sm/kpm_sm_v03.00/enc/: kpm_enc_generic.h
src/sm/mac_sm/dec/: mac_dec_asn.h  mac_dec_fb.h  mac_dec_generic.h  mac_dec_plain.h
src/sm/mac_sm/enc/: mac_enc_fb.h  mac_enc_generic.h  mac_enc_plain.h
src/sm/pdcp_sm/dec/: pdcp_dec_asn.h  pdcp_dec_fb.h  pdcp_dec_generic.h  pdcp_dec_plain.h
src/sm/pdcp_sm/enc/: pdcp_enc_fb.h  pdcp_enc_generic.h  pdcp_enc_plain.h
src/sm/rc_sm/dec/: rc_dec_asn.h  rc_dec_fb.h  rc_dec_generic.h  rc_dec_plain.h
src/sm/rc_sm/enc/: rc_enc_fb.h  rc_enc_plain.h
src/sm/rlc_sm/dec/: rlc_dec_asn.h  rlc_dec_fb.h  rlc_dec_generic.h  rlc_dec_plain.h
src/sm/rlc_sm/enc/: rlc_enc_fb.h  rlc_enc_generic.h  rlc_enc_plain.h
src/sm/slice_sm/dec/: slice_dec_asn.h  slice_dec_fb.h  slice_dec_generic.h  slice_dec_plain.h
src/sm/slice_sm/enc/: slice_enc_fb.h  slice_enc_generic.h  slice_enc_plain.h
src/sm/tc_sm/dec/: tc_dec_asn.h  tc_dec_fb.h  tc_dec_generic.h  tc_dec_plain.h
src/sm/tc_sm/enc/: tc_enc_fb.h  tc_enc_generic.h  tc_enc_plain.h
src/xApp/: CMakeLists.txt  e42_xapp.c  e42_xapp_api.c  msg_handler_xapp.c  sm_ran_function_def.c  sm_ran_function_def.h
src/xApp/db/sqlite3/: sqlite3_wrapper.c
test/sm/dapp_sm/: CMakeLists.txt  main.c
(+46 files in other folders)
